[package]
name = "lax"
version = "0.0.1"
authors = ["majorz"]
description = "Experimental programming language"
homepage = "https://github.com/majorz/lax"
repository = "https://github.com/majorz/lax"
keywords = ["programming-language", "language", "functional", "dynamically-typed"]
license = "Apache-2.0"

[dev-dependencies]
criterion = "*"
indoc = "*"

[[bench]]
name = "tokenize"
harness = false

[[bench]]
name = "advancer"
harness = false
